3.9.3/_sources/gallery/userdemo/pgf_texsystem.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/userdemo/pgf_texsystem.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. meta::
        :keywords: codex

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_userdemo_pgf_texsystem.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_userdemo_pgf_texsystem.py:


=============
PGF texsystem
=============

.. GENERATED FROM PYTHON SOURCE LINES 6-31



.. image-sg:: /gallery/userdemo/images/sphx_glr_pgf_texsystem_001.png
   :alt: pgf texsystem
   :srcset: /gallery/userdemo/images/sphx_glr_pgf_texsystem_001.png, /gallery/userdemo/images/sphx_glr_pgf_texsystem_001_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. code-block:: Python


    import matplotlib.pyplot as plt

    plt.rcParams.update({
        "pgf.texsystem": "pdflatex",
        "pgf.preamble": "\n".join([
             r"\usepackage[utf8x]{inputenc}",
             r"\usepackage[T1]{fontenc}",
             r"\usepackage{cmbright}",
        ]),
    })

    fig, ax = plt.subplots(figsize=(4.5, 2.5))

    ax.plot(range(5))

    ax.text(0.5, 3., "serif", family="serif")
    ax.text(0.5, 2., "monospace", family="monospace")
    ax.text(2.5, 2., "sans-serif", family="sans-serif")
    ax.set_xlabel(r"µ is not $\mu$")

    fig.tight_layout(pad=.5)

    fig.savefig("pgf_texsystem.pdf")
    fig.savefig("pgf_texsystem.png")


.. _sphx_glr_download_gallery_userdemo_pgf_texsystem.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: pgf_texsystem.ipynb <pgf_texsystem.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: pgf_texsystem.py <pgf_texsystem.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: pgf_texsystem.zip <pgf_texsystem.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
